tests/ported/snapshots/tests__ported__c_tests__sample_100_timespan.snap
---
source: tests/ported/c_tests.rs
expression: sbdf
---
Sbdf(
  file_header: FileHeader(
    major_version: 1,
    minor_version: 0,
  ),
  table_metadata: TableMetadata(
    metadata: [
      Metadata(
        name: "SbdfTest.TableMetaTimeSpan",
        value: TimeSpan(12300),
        default_value: None,
      ),
    ],
    columns: [
      ColumnMetadata(
        name: "TimeSpan",
        ty: TimeSpan,
        other: [
          Metadata(
            name: "SbdfTest.ColumnMetaTimeSpan0",
            value: TimeSpan(12300),
            default_value: None,
          ),
        ],
      ),
    ],
  ),
  table_slices: [
    TableSlice(
      column_slices: [
        ColumnSlice(
          values: Plain(
            value: TimeSpanArray(TimeSpanArray([
              405900,
              418200,
              0,
              442800,
              455100,
              0,
              479700,
              492000,
              504300,
              516600,
              528900,
              0,
              0,
              565800,
              578100,
              590400,
              602700,
              615000,
              627300,
              0,
              0,
              664200,
              676500,
              688800,
              701100,
              713400,
              0,
              738000,
              750300,
              0,
              774900,
              787200,
              799500,
              0,
              824100,
              836400,
              848700,
              861000,
              0,
              885600,
              0,
              910200,
              922500,
              934800,
              947100,
              959400,
              971700,
              0,
              996300,
              1008600,
              1020900,
              1033200,
              1045500,
              1057800,
              0,
              1082400,
              0,
              1107000,
              1119300,
              1131600,
              1143900,
              0,
              1168500,
              1180800,
              1193100,
              0,
              1217700,
              1230000,
              0,
              1254600,
              1266900,
              1279200,
              1291500,
              1303800,
              0,
              0,
              1340700,
              1353000,
              1365300,
              1377600,
              1389900,
              1402200,
              0,
              0,
              1439100,
              1451400,
              1463700,
              1476000,
              1488300,
              0,
              1512900,
              1525200,
              0,
              1549800,
              1562100,
              1574400,
              0,
              1599000,
              1611300,
              1623600,
            ])),
          ),
          properties: ColumnProperties(
            is_invalid: Some(EncodedBitArray(
              bit_count: 100,
              bytes: [
                4,
                8,
                16,
                32,
                64,
                128,
                2,
                4,
                8,
                16,
                32,
                64,
                128,
              ],
            )),
            error_code: Some(Plain(
              value: StringArray(StringArray([
                "",
                "",
                "Error 35",
                "",
                "",
                "",
                "",
                "",
                "",
                "",
                "",
                "Error 44",
                "",
                "",
                "",
                "",
                "",
                "",
                "",
                "",
                "Error 53",
                "",
                "",
                "",
                "",
                "",
                "",
                "",
                "",
                "Error 62",
                "",
                "",
                "",
                "",
                "",
                "",
                "",
                "",
                "Error 71",
                "",
                "",
                "",
                "",
                "",
                "",
                "",
                "",
                "Error 80",
                "",
                "",
                "",
                "",
                "",
                "",
                "",
                "",
                "Error 89",
                "",
                "",
                "",
                "",
                "",
                "",
                "",
                "",
                "Error 98",
                "",
                "",
                "",
                "",
                "",
                "",
                "",
                "",
                "Error 107",
                "",
                "",
                "",
                "",
                "",
                "",
                "",
                "",
                "Error 116",
                "",
                "",
                "",
                "",
                "",
                "",
                "",
                "",
                "Error 125",
                "",
                "",
                "",
                "",
                "",
                "",
                "",
              ])),
            )),
            has_replaced_value: Some(EncodedBitArray(
              bit_count: 100,
              bytes: [
                1,
                0,
                0,
                1,
                0,
                16,
                1,
                0,
                16,
                1,
                0,
                16,
                0,
              ],
            )),
            other: [],
          ),
        ),
      ],
    ),
  ],
)
