tests/ported/snapshots/tests__ported__c_tests__sample_1_binary.snap
---
source: tests/ported/c_tests.rs
expression: sbdf
---
Sbdf(
  file_header: FileHeader(
    major_version: 1,
    minor_version: 0,
  ),
  table_metadata: TableMetadata(
    metadata: [
      Metadata(
        name: "SbdfTest.TableMetaBinary",
        value: Binary([
          1,
        ]),
        default_value: None,
      ),
    ],
    columns: [
      ColumnMetadata(
        name: "Binary",
        ty: Binary,
        other: [
          Metadata(
            name: "SbdfTest.ColumnMetaBinary0",
            value: Binary([
              1,
            ]),
            default_value: None,
          ),
        ],
      ),
    ],
  ),
  table_slices: [
    TableSlice(
      column_slices: [
        ColumnSlice(
          values: Plain(
            value: Binary([
              33,
              34,
              35,
            ]),
          ),
          properties: ColumnProperties(
            is_invalid: None,
            error_code: None,
            has_replaced_value: None,
            other: [],
          ),
        ),
      ],
    ),
  ],
)
