tests/ported/snapshots/tests__ported__c_tests__sample_1_boolean.snap
---
source: tests/ported/c_tests.rs
expression: sbdf
---
Sbdf(
  file_header: FileHeader(
    major_version: 1,
    minor_version: 0,
  ),
  table_metadata: TableMetadata(
    metadata: [
      Metadata(
        name: "SbdfTest.TableMetaBoolean",
        value: Bool(true),
        default_value: None,
      ),
    ],
    columns: [
      ColumnMetadata(
        name: "Boolean",
        ty: Bool,
        other: [
          Metadata(
            name: "SbdfTest.ColumnMetaBoolean0",
            value: Bool(true),
            default_value: None,
          ),
        ],
      ),
    ],
  ),
  table_slices: [
    TableSlice(
      column_slices: [
        ColumnSlice(
          values: BitArray(EncodedBitArray(
            bit_count: 1,
            bytes: [
              0,
            ],
          )),
          properties: ColumnProperties(
            is_invalid: None,
            error_code: None,
            has_replaced_value: None,
            other: [],
          ),
        ),
      ],
    ),
  ],
)
