tests/ported/snapshots/tests__ported__c_tests__sample_1_datetime.snap
---
source: tests/ported/c_tests.rs
expression: sbdf
---
Sbdf(
  file_header: FileHeader(
    major_version: 1,
    minor_version: 0,
  ),
  table_metadata: TableMetadata(
    metadata: [
      Metadata(
        name: "SbdfTest.TableMetaDateTime",
        value: DateTime(DateTime(49923043200000)),
        default_value: None,
      ),
    ],
    columns: [
      ColumnMetadata(
        name: "DateTime",
        ty: DateTime,
        other: [
          Metadata(
            name: "SbdfTest.ColumnMetaDateTime0",
            value: DateTime(DateTime(49923043200000)),
            default_value: None,
          ),
        ],
      ),
    ],
  ),
  table_slices: [
    TableSlice(
      column_slices: [
        ColumnSlice(
          values: Plain(DateTime(DateTime(49923129600000))),
          properties: ColumnProperties(
            is_invalid: None,
            error_code: None,
            has_replaced_value: None,
            other: [],
          ),
        ),
      ],
    ),
  ],
)
