tests/ported/snapshots/tests__ported__c_tests__sample_1_integer.snap
---
source: tests/ported/c_tests.rs
expression: sbdf
---
Sbdf(
  file_header: FileHeader(
    major_version: 1,
    minor_version: 0,
  ),
  table_metadata: TableMetadata(
    metadata: [
      Metadata(
        name: "SbdfTest.TableMetaInteger",
        value: Int(3),
        default_value: None,
      ),
    ],
    columns: [
      ColumnMetadata(
        name: "Integer",
        ty: Int,
        other: [
          Metadata(
            name: "SbdfTest.ColumnMetaInteger0",
            value: Int(3),
            default_value: None,
          ),
        ],
      ),
    ],
  ),
  table_slices: [
    TableSlice(
      column_slices: [
        ColumnSlice(
          values: Plain(Int(67)),
          properties: ColumnProperties(
            is_invalid: None,
            error_code: None,
            has_replaced_value: None,
            other: [],
          ),
        ),
      ],
    ),
  ],
)
