tests/ported/snapshots/tests__ported__c_tests__sample_1_string.snap
---
source: tests/ported/c_tests.rs
expression: sbdf
---
Sbdf(
  file_header: FileHeader(
    major_version: 1,
    minor_version: 0,
  ),
  table_metadata: TableMetadata(
    metadata: [
      Metadata(
        name: "SbdfTest.TableMetaString",
        value: String("The"),
        default_value: None,
      ),
    ],
    columns: [
      ColumnMetadata(
        name: "String",
        ty: String,
        other: [
          Metadata(
            name: "SbdfTest.ColumnMetaString0",
            value: String("The"),
            default_value: None,
          ),
        ],
      ),
    ],
  ),
  table_slices: [
    TableSlice(
      column_slices: [
        ColumnSlice(
          values: Plain(
            value: String("The"),
          ),
          properties: [],
        ),
      ],
    ),
  ],
)
